--- a/app/views/weixin/menu1.html
+++ b/app/views/weixin/menu1.html
@@ -1,2 +1,16 @@
-<h1>menu1</h1>
-<p>menu1 weidong 33333q</p>
+<style type="text/css">
+    
+</style>
+<body background="1-启动页_MarkMan.png">
+<p1>用户名：</p1>
+<input type="text">
+<br/>
+<p2>密码：</p2>
+<input type="password">
+<br/>
+男<input type="radio" name="sex">
+女<input type="radio" name="sex">
+<br/>
+<input type="button" name="" value="登录"/>
+<input type="button" name="" value="注册"/>
+</body>
