--- a/app/views/weixin/menu1.html
+++ b/app/views/weixin/menu1.html
@@ -1,16 +1,25 @@
-<style type="text/css">
-    
-</style>
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title></title>
+    <style type="text/css">
+
+    </style>
+
+</head>
 <body background="1-启动页_MarkMan.png">
 <p1>用户名：</p1>
 <input type="text">
 <br/>
 <p2>密码：</p2>
-<input type="password">
+<input type="password" width="100%" height="100%">
 <br/>
 男<input type="radio" name="sex">
 女<input type="radio" name="sex">
 <br/>
 <input type="button" name="" value="登录"/>
 <input type="button" name="" value="注册"/>
+
 </body>
+</html>
