--- a/app/views/weixin/menu1.html
+++ b/app/views/weixin/menu1.html
@@ -3,17 +3,16 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <link href="frontcss.css" type="text/css" rel="stylesheet">
     <style type="text/css">
-
     </style>
-
 </head>
-<body background="1-启动页_MarkMan.png">
-<p1>用户名：</p1>
+<body background="1-启动页_MarkMan.png" width="300px" height="400px">
+<p1><span>用户名：</span></p1>
 <input type="text">
 <br/>
-<p2>密码：</p2>
-<input type="password" width="100%" height="100%">
+<p2><span>密码：</span></p2>
+<input type="password">
 <br/>
 男<input type="radio" name="sex">
 女<input type="radio" name="sex">
