--- a/app/views/weixin/menu1.html
+++ b/app/views/weixin/menu1.html
@@ -2,24 +2,88 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
+    
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
     <style type="text/css">
+      
+          body {
+        padding-top: 40px;
+        padding-bottom: 40px;
+        background-color: #eee;
+      }
+  
+      .form-signin {
+        max-width: 330px;
+        padding: 15px;
+        margin: 0 auto;
+      }
+      .form-signin .form-signin-heading,
+      .form-signin .checkbox {
+        margin-bottom: 10px;
+      }
+      .form-signin .checkbox {
+        font-weight: normal;
+      }
+      .form-signin .form-control {
+        position: relative;
+        height: auto;
+        -webkit-box-sizing: border-box;
+           -moz-box-sizing: border-box;
+                box-sizing: border-box;
+        padding: 10px;
+        font-size: 16px;
+      }
+      .form-signin .form-control:focus {
+        z-index: 2;
+      }
+      .form-signin input[type="email"] {
+        margin-bottom: -1px;
+        border-bottom-right-radius: 0;
+        border-bottom-left-radius: 0;
+      }
+      .form-signin input[type="password"] {
+        margin-bottom: 10px;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+      }
 
     </style>
 
 </head>
 <body background="1-启动页_MarkMan.png">
-<p1>用户名：</p1>
-<input type="text">
-<br/>
-<p2>密码：</p2>
-<input type="password" width="100%" height="100%">
-<br/>
-男<input type="radio" name="sex">
-女<input type="radio" name="sex">
-<br/>
-<input type="button" name="" value="登录"/>
-<input type="button" name="" value="注册"/>
+<!--<p1>用户名：</p1>-->
+<!--<input type="text">-->
+<!--<br/>-->
+<!--<p2>密码：</p2>-->
+<!--<input type="password" width="100%" height="100%">-->
+<!--<br/>-->
+<!--男<input type="radio" name="sex">-->
+<!--女<input type="radio" name="sex">-->
+<!--<br/>-->
+<!--<input type="button" name="" value="登录"/>-->
+<!--<input type="button" name="" value="注册"/>-->
+
+<div class="container">
+
+      <form class="form-signin">
+        <h2 class="form-signin-heading">Please sign in</h2>
+        <label for="inputEmail" class="sr-only">Email address</label>
+        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+        <label for="inputPassword" class="sr-only">Password</label>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" value="remember-me"> Remember me
+          </label>
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      </form>
+
+    </div>
 
 </body>
 </html>
