--- a/app/views/weixin/frontcss.css
+++ b/app/views/weixin/frontcss.css
@@ -1,3 +1,10 @@
-span{
-    font-size: 20px;
+.login{
+    padding-top: 20%;
+    padding-left: 40%;
+    margin: 0px auto;
+}
+.login_head{
+    padding-left: 45%;
+    padding-top: 10%;
+    font-size: 30px;
 }
