--- a/app/views/weixin/menu1.html
+++ b/app/views/weixin/menu1.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
-<<<<<<< HEAD
-    
+        <link href="frontcss.css" type="text/css" rel="stylesheet">
+    <style type="text/css"></style>
+
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
@@ -52,26 +53,9 @@
         border-top-right-radius: 0;
       }
 
-=======
-    <link href="frontcss.css" type="text/css" rel="stylesheet">
-    <style type="text/css">
->>>>>>> b1d6864ef17425dc8ee89494245de789068be8c1
     </style>
 </head>
-<<<<<<< HEAD
 <body background="1-启动页_MarkMan.png">
-<!--<p1>用户名：</p1>-->
-<!--<input type="text">-->
-<!--<br/>-->
-<!--<p2>密码：</p2>-->
-<!--<input type="password" width="100%" height="100%">-->
-<!--<br/>-->
-<!--男<input type="radio" name="sex">-->
-<!--女<input type="radio" name="sex">-->
-<!--<br/>-->
-<!--<input type="button" name="" value="登录"/>-->
-<!--<input type="button" name="" value="注册"/>-->
-
 <div class="container">
 
       <form class="form-signin">
@@ -89,20 +73,18 @@
       </form>
 
     </div>
-=======
-<body background="1-启动页_MarkMan.png" width="300px" height="400px">
-<p1><span>用户名：</span></p1>
-<input type="text">
-<br/>
-<p2><span>密码：</span></p2>
-<input type="password">
-<br/>
-男<input type="radio" name="sex">
-女<input type="radio" name="sex">
-<br/>
-<input type="button" name="" value="登录"/>
-<input type="button" name="" value="注册"/>
->>>>>>> b1d6864ef17425dc8ee89494245de789068be8c1
+<!--<body background="1-启动页_MarkMan.png" width="300px" height="400px">-->
+<!--<p1><span>用户名：</span></p1>-->
+<!--<input type="text">-->
+<!--<br/>-->
+<!--<p2><span>密码：</span></p2>-->
+<!--<input type="password">-->
+<!--<br/>-->
+<!--男<input type="radio" name="sex">-->
+<!--女<input type="radio" name="sex">-->
+<!--<br/>-->
+<!--<input type="button" name="" value="登录"/>-->
+<!--<input type="button" name="" value="注册"/>-->
 
-</body>
+<!--</body>-->
 </html>
