--- a/app/views/weixin/menu1.html
+++ b/app/views/weixin/menu1.html
@@ -10,88 +10,66 @@
     <!--<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>-->
     <!--<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>-->
     <!--<%= csrf_meta_tags %>-->
-    <!--<style type="text/css">-->
-      <!-- -->
-          <!--body {-->
-        <!--padding-top: 40px;-->
-        <!--padding-bottom: 40px;-->
-        <!--background-color: #eee;-->
-      <!--}-->
-  <!-- -->
-      <!--.form-signin {-->
-        <!--max-width: 330px;-->
-        <!--padding: 15px;-->
-        <!--margin: 0 auto;-->
-      <!--}-->
-      <!--.form-signin .form-signin-heading,-->
-      <!--.form-signin .checkbox {-->
-        <!--margin-bottom: 10px;-->
-      <!--}-->
-      <!--.form-signin .checkbox {-->
-        <!--font-weight: normal;-->
-      <!--}-->
-      <!--.form-signin .form-control {-->
-        <!--position: relative;-->
-        <!--height: auto;-->
-        <!-&#45;&#45;webkit-box-sizing: border-box;-->
-           <!-&#45;&#45;moz-box-sizing: border-box;-->
-                <!--box-sizing: border-box;-->
-        <!--padding: 10px;-->
-        <!--font-size: 16px;-->
-      <!--}-->
-      <!--.form-signin .form-control:focus {-->
-        <!--z-index: 2;-->
-      <!--}-->
-      <!--.form-signin input[type="email"] {-->
-        <!--margin-bottom: -1px;-->
-        <!--border-bottom-right-radius: 0;-->
-        <!--border-bottom-left-radius: 0;-->
-      <!--}-->
-      <!--.form-signin input[type="password"] {-->
-        <!--margin-bottom: 10px;-->
-        <!--border-top-left-radius: 0;-->
-        <!--border-top-right-radius: 0;-->
-      <!--}-->
+    <style type="text/css">
 
-    <!--</style>-->
+          body {
+        padding-top: 40px;
+        padding-bottom: 40px;
+        background-color: #eee;
+      }
+
+      .form-signin {
+        max-width: 330px;
+        padding: 15px;
+        margin: 0 auto;
+      }
+      .form-signin .form-signin-heading,
+      .form-signin .checkbox {
+        margin-bottom: 10px;
+      }
+      .form-signin .checkbox {
+        font-weight: normal;
+      }
+      .form-signin .form-control {
+        position: relative;
+        height: auto;
+        -webkit-box-sizing: border-box;
+           -moz-box-sizing: border-box;
+                box-sizing: border-box;
+        padding: 10px;
+        font-size: 16px;
+      }
+      .form-signin .form-control:focus {
+        z-index: 2;
+      }
+      .form-signin input[type="email"] {
+        margin-bottom: -1px;
+        border-bottom-right-radius: 0;
+        border-bottom-left-radius: 0;
+      }
+      .form-signin input[type="password"] {
+        margin-bottom: 10px;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+      }
+
+    </style>
 </head>
-<!--<div class="container">-->
+<div class="container">
 
-      <!--<form class="form-signin">-->
-        <!--<h2 class="form-signin-heading">Please sign in</h2>-->
-        <!--<label for="inputEmail" class="sr-only">Email address</label>-->
-        <!--<input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">-->
-        <!--<label for="inputPassword" class="sr-only">Password</label>-->
-        <!--<input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">-->
-        <!--<div class="checkbox">-->
-          <!--<label>-->
-            <!--<input type="checkbox" value="remember-me"> Remember me-->
-          <!--</label>-->
-        <!--</div>-->
-        <!--<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>-->
-      <!--</form>-->
+      <form class="form-signin">
+        <h2 class="form-signin-heading">那刻</h2>
+        <label for="inputEmail" class="sr-only">用户名：</label>
+        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+        <label for="inputPassword" class="sr-only">密码：</label>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" value="remember-me"> 记住登录
+          </label>
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      </form>
 
-    <!--</div>-->
-<body background="1-启动页_MarkMan.png" width="300px" height="400px">
-<div class="login">
-    <div class="login_head">
-        Nokee
     </div>
-    <p1><span>用户名：</span></p1>
-    <input type="text">
-    <br/>
-    <p2><span>密码：</span></p2>
-    <input type="password">
-    <br/>
-    男<input type="radio" name="sex">
-    女<input type="radio" name="sex">
-    <br/>
-    <div class="login_button">
-        <input type="button" name="" value="登录" width="40px" height="20px"/>
-        <input type="button" name="" value="注册" width="40px" height="20px"/>
-    </div>
-
-</div>
-
-</body>
 </html>
