--- a/app/views/weixin/menu1.html
+++ b/app/views/weixin/menu1.html
@@ -23,9 +23,15 @@
         padding: 15px;
         margin: 0 auto;
       }
+      .form-signin-heading{
+          text-align: center;
+      }
       .form-signin .form-signin-heading,
       .form-signin .checkbox {
         margin-bottom: 10px;
+      }
+      .sr-only{
+          text-align: right;
       }
       .form-signin .checkbox {
         font-weight: normal;
@@ -41,6 +47,7 @@
       }
       .form-signin .form-control:focus {
         z-index: 2;
+          text-align: center;
       }
       .form-signin input[type="email"] {
         margin-bottom: -1px;
@@ -52,7 +59,9 @@
         border-top-left-radius: 0;
         border-top-right-radius: 0;
       }
-
+        .buttonRL{
+            text-align: center;
+        }
     </style>
 </head>
 <div class="container">
@@ -62,14 +71,18 @@
         <label for="inputEmail" class="sr-only">用户名：</label>
         <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
           <br/>
-          <label for="inputPassword" class="sr-only">密码：</label>
+          <label for="inputPassword" class="sr-only"> 密码：</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
         <div class="checkbox">
           <label>
             <input type="checkbox" value="remember-me"> 记住登录
           </label>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+          <div class="buttonRL">
+              <button class="btnsubmit" type="submit"><a href="http://www.nokee.com" >登录</a></button>
+              <button class="btnregistered" type="button">注册</button>
+
+          </div>
       </form>
 
     </div>
