--- a/app/views/weixin/menu1.html
+++ b/app/views/weixin/menu1.html
@@ -82,7 +82,7 @@
             </label>
         </div>
         <div class="buttonRL">
-            <button class="btnsubmit" type="submit"><a  href="demo.htm">登录</a></button>
+            <button class="btnsubmit" type="submit"><a  href="demo.html">登录</a></button>
             <button class="btnregistered" type="button"><a href="http://www.nokee.com">注册</a></button>
 
         </div>
