--- a/app/views/weixin/menu1.html
+++ b/app/views/weixin/menu1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
-        <link href="frontcss.css" type="text/css" rel="stylesheet">
+        <link href="../../../public/frontcss.css" type="text/css" rel="stylesheet">
     <style type="text/css"></style>
 
     <style type="text/css">
@@ -82,7 +82,7 @@
             </label>
         </div>
         <div class="buttonRL">
-            <button class="btnsubmit" type="submit"><a  href="demo.html">登录</a></button>
+            <button class="btnsubmit" type="submit"><a  href="../../../public/demo.html">登录</a></button>
             <button class="btnregistered" type="button"><a href="http://www.nokee.com">注册</a></button>
 
         </div>
