--- a/app/views/weixin/demo.html
+++ b/app/views/weixin/demo.html
@@ -3,7 +3,7 @@
   <head>
     <title>Bootstrap beign</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="../app/views/weixin/zepto.min.js"></script>
+	<script src="zepto.min.js"></script>
 	<link href="animate.css" rel="stylesheet" type="text/css">
 	<style>
 	   blockquote, body, button, dd, dl, dt, fieldset, form, h1, h2, h3, h4, h5, h6, hr, input, legend, li, ol, p, pre, td, textarea, th, ul,img{
