--- a/public/frontcss.css
+++ b/public/frontcss.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0px;
+    text-decoration: none;
+}
 .login{
     padding-top: 20%;
     padding-left: 40%;
@@ -13,4 +17,62 @@
     padding-top: 10%;
     font-size: 30px;
 
+}
+.nav{
+    width: 100%;
+    height: 50px;
+    background-color: cyan;
+}
+.heading_img{
+    /*padding-top: 40px;*/
+}
+
+.list-menu{
+    border-top:1px solid #C1D6E6;
+    padding-bottom:14px;
+    font-size:12px;}
+.list-menu li{
+    display:block;
+    border:1px solid #C1D6E6;
+    border-top:none;
+    background:#fff;}
+.list-menu li a{
+    display:block;
+    position:relative;
+    padding:14px;
+    color:#154364;
+    font-weight:bold;
+    padding-left:15px;
+    padding-right:15px;
+    text-decoration: none;
+
+}
+.list-menu li a b{
+    /*background:url(../img/arrow-ts.png) no-repeat right;*/
+    padding-right:19px;
+    display:block;
+    font:bold 12px Arial, Helvetica, sans-serif;
+    line-height:23px;
+    text-decoration: none;
+}
+.list-menu li a:hover{
+    /*background:#4088C0 url(../img/menu-hover.png) repeat-x bottom;*/
+    color:#4088C0;}
+.list-menu li a:hover b{
+    /*background:url(../img/arrow-ts-hover.png) no-repeat right;*/
+    color:#fff;}
+.list-menu li a span{
+    font-weight:bold;
+    color:#fff;
+    background:#3277AB;
+    padding:3px 5px;
+    border-radius:2px;
+    margin-left:10px;
+    text-decoration: none;
+}
+.list-menu li a:hover span{
+    background:#EAF0F6;
+    color:#3277AB;}
+.list-menu a .red{
+    background:#E76463;
 }
