--- a/public/frontcss.css
+++ b/public/frontcss.css
@@ -24,7 +24,8 @@
     background-color: cyan;
 }
 .heading_img{
-    /*padding-top: 40px;*/
+    width: 100%;
+    height: 30%;
 }
 
 .list-menu{
@@ -49,9 +50,9 @@
 }
 .list-menu li a b{
     /*background:url(../img/arrow-ts.png) no-repeat right;*/
-    padding-right:19px;
+    padding-right:0px;
     display:block;
-    font:bold 12px Arial, Helvetica, sans-serif;
+    font:bold 30px Arial, Helvetica, sans-serif;
     line-height:23px;
     text-decoration: none;
 }
@@ -60,7 +61,7 @@
     color:#4088C0;}
 .list-menu li a:hover b{
     /*background:url(../img/arrow-ts-hover.png) no-repeat right;*/
-    color:#fff;}
+    color: #8688ff;}
 .list-menu li a span{
     font-weight:bold;
     color:#fff;
